docs/api/v/2022.0.5/ui/tabs.md
#![](../../../../../images/luxe-dark.svg){width="96em"}

# `luxe` API (`2022.0.5`)  


---

## `luxe: ui/tabs` module

- [UITabs](#uitabs)   

---

### UITabs
`:::js import "luxe: ui/tabs" for UITabs`
> no docs found

- [create](#UITabs.create)(**ui**: `Any`)
- [set_tab](#UITabs.set_tab+2)(**control**: `Control`, **index**: `Num`)
- [get_tab_header](#UITabs.get_tab_header+2)(**control**: `Control`, **index**: `Num`)
- [get_tab](#UITabs.get_tab+2)(**control**: `Control`, **index**: `Num`)
- [add_tab](#UITabs.add_tab+3)(**control**: `Control`, **title**: `String`, **title_color**: `Color`)

<hr/>
<endpoint module="luxe: ui/tabs" class="UITabs" signature="create(ui : Any)"></endpoint>
<signature id="UITabs.create">UITabs.create(**ui**: `Any`)
<a class="headerlink" href="#UITabs.create" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/tabs" class="UITabs" signature="set_tab(control : Control, index : Num)"></endpoint>
<signature id="UITabs.set_tab+2">UITabs.set_tab(**control**: `Control`, **index**: `Num`)
<a class="headerlink" href="#UITabs.set_tab+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Bool`
> no docs found   

<endpoint module="luxe: ui/tabs" class="UITabs" signature="get_tab_header(control : Control, index : Num)"></endpoint>
<signature id="UITabs.get_tab_header+2">UITabs.get_tab_header(**control**: `Control`, **index**: `Num`)
<a class="headerlink" href="#UITabs.get_tab_header+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Control`
> no docs found   

<endpoint module="luxe: ui/tabs" class="UITabs" signature="get_tab(control : Control, index : Num)"></endpoint>
<signature id="UITabs.get_tab+2">UITabs.get_tab(**control**: `Control`, **index**: `Num`)
<a class="headerlink" href="#UITabs.get_tab+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Control`
> no docs found   

<endpoint module="luxe: ui/tabs" class="UITabs" signature="add_tab(control : Control, title : String, title_color : Color)"></endpoint>
<signature id="UITabs.add_tab+3">UITabs.add_tab(**control**: `Control`, **title**: `String`, **title_color**: `Color`)
<a class="headerlink" href="#UITabs.add_tab+3" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Control`
> no docs found   

